--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,3 +28,33 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+
+      
+    - name: web docker build and push
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker build -t ${{ secrets.DOCKER_REPO }}/my-project .
+        docker push ${{ secrets.DOCKER_REPO }}/my-project
+
+  deploy:
+    # needs를 통해 build job이 수행 성공시에 작업되도록 설정
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    # NCP 로그인 / docker image pull & run
+    - name: NCP login and docker image pull and run
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.NCP_HOST }}
+        username: ${{ secrets.NCP_USERNAME }}
+        password: ${{ secrets.NCP_PASSWORD }}
+        port: ${{ secrets.NCP_PORT }}
+        script: |
+          sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker rm -f $(sudo docker ps -a -q)
+          sudo docker pull ${{ secrets.DOCKER_REPO }}/my-project
+          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}/my-project
+          sudo docker image prune -f
+          ps -ef | grep 
