--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,4 +57,4 @@ jobs:
           sudo docker pull ${{ secrets.DOCKER_REPO }}/my-project
           sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}/my-project
           sudo docker image prune -f
-          ps -ef | grep 
+          ps -ef | grep java
