--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,9 +24,9 @@ jobs:
     - name: yml setFile
       uses: microsoft/variable-substitution@v1
       env:
-        - spring.datasource.url: ${{ secrets.RDS_HOST }}
-        - spring.datasource.username: ${{ secrets.RDS_USERNAME }}
-        - spring.datasource.password: ${{ secrets.RDS_PASSWORD }}
+         spring.datasource.url: ${{ secrets.RDS_HOST }}
+         spring.datasource.username: ${{ secrets.RDS_USERNAME }}
+         spring.datasource.password: ${{ secrets.RDS_PASSWORD }}
 
     # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
