--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
     - name: yml setFile
       uses: microsoft/variable-substitution@v1
       with:
-        file: src/main/resources/application.yml
+        files: src/main/resources/application.yml
       env:
          spring.datasource.url: ${{ secrets.RDS_HOST }}
          spring.datasource.username: ${{ secrets.RDS_USERNAME }}
