--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,7 +46,7 @@ jobs:
     - name: web docker build and push
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -t ${{ secrets.DOCKER_REPO }}/my-project .
+        docker build --build-arg SPRING_PROFILES_ACTIVE=prod -t ${{ secrets.DOCKER_REPO }}/my-project .
         docker push ${{ secrets.DOCKER_REPO }}/my-project
 
   deploy:
