JWT - SECURITY 적용

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,9 +10,18 @@ spring:
     url: ${rds.host}
 
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
       ddl-auto: update
+
+jwt:
+  secret: ${jwt.secret}
+  access-token-expire-time: 60000 #1시간
+  refresh-token-expire-time: 86400000 #24시간
+
+
+
+# Swagger UI의 접근 경로를 설정합니다.
+springdoc:
+  swagger-ui:
+    enabled: true
