--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,20 @@ spring:
     url: jdbc:mysql://jobterviewee.cvquswweky2z.ap-northeast-2.rds.amazonaws.com/jobterviewee?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
       ddl-auto: update
+
+jwt:
+  secret: testtestetstesetsetstestetestsetsetse
+  access-token-expire-time: 60000
+  refresh-token-expire-time: 86400000
+
+
+
+# Swagger UI의 접근 경로를 설정합니다.
+springdoc:
+  swagger-ui:
+    enabled: true
+
+
