exception 처리 및 reissue 커스텀 헤더로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: potendayjob0322!
-    url: jdbc:mysql://jobterviewee.cvquswweky2z.ap-northeast-2.rds.amazonaws.com/jobterviewee?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: root1234
+    url: jdbc:mysql://database-1.czamya2yi0yw.ap-northeast-2.rds.amazonaws.com/demo?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
   jpa:
     show-sql: true
@@ -16,7 +16,7 @@ spring:
 
 jwt:
   secret: testtestetstesetsetstestetestsetsetse
-  access-token-expire-time: 60000
+  access-token-expire-time:  3600000
   refresh-token-expire-time: 86400000
 
 
