--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,6 +69,7 @@ jobs:
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker rm -f $(sudo docker ps -a -q)
           sudo docker pull ${{ secrets.DOCKER_REPO }}/my-project
+          sudo docker run -d --name redis-server -p 6379:6379 redis
           sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}/my-project
           sudo docker image prune -f
           ps -ef | grep java
