--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,7 +15,7 @@ spring:
       ddl-auto: update
   data:
     redis:
-      host: redis-server
+      host: ${redis.host}
       port: 6379
   cache:
     type: redis
