--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: potendayjob0322!
-    url: jdbc:mysql://jobterviewee.cvquswweky2z.ap-northeast-2.rds.amazonaws.com/jobterviewee?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: root1234
+    url: jdbc:mysql://database-1.czamya2yi0yw.ap-northeast-2.rds.amazonaws.com/demo?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
   jpa:
     show-sql: true
@@ -31,3 +31,13 @@ jwt:
 springdoc:
   swagger-ui:
     enabled: true
+
+# Feign Client logging
+logging:
+  level:
+    com.bisise.interviewserver.external.openfeign: debug
+
+openai:
+  url: https://api.openai.com/v1/chat/completions
+  model: gpt-3.5-turbo
+  apikey: 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
