--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       ddl-auto: update
   data:
     redis:
-      host: localhost
+      host: 175.45.193.187
       port: 6379
   cache:
     type: redis
