--- a/.github/workflows/gradle_dev.yml
+++ b/.github/workflows/gradle_dev.yml
@@ -36,8 +36,8 @@ jobs:
     - name: web docker build and push
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -t ${{ secrets.DOCKER_REPO }}/my-project .
-        docker push ${{ secrets.DOCKER_REPO }}/my-project
+        docker build -t ${{ secrets.DOCKER_REPO }}/dev-project .
+        docker push ${{ secrets.DOCKER_REPO }}/dev-project
 
   deploy:
     # needs를 통해 build job이 수행 성공시에 작업되도록 설정
@@ -57,7 +57,7 @@ jobs:
           sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker rm -f $(sudo docker ps -a -q)
-          sudo docker pull ${{ secrets.DOCKER_REPO }}/my-project
-          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}/my-project
+          sudo docker pull ${{ secrets.DOCKER_REPO }}/dev-project
+          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}/dev-project
           sudo docker image prune -f
           ps -ef | grep java
