--- a/.github/workflows/gradle_dev.yml
+++ b/.github/workflows/gradle_dev.yml
@@ -58,6 +58,6 @@ jobs:
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker rm -f $(sudo docker ps -a -q)
           sudo docker pull ${{ secrets.DOCKER_REPO }}/dev-project
-          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}/dev-project
+          sudo docker run -d -e SPRING_PROFILES_ACTIVE=dev -p 8080:8080 ${{ secrets.DOCKER_REPO }}/dev-project
           sudo docker image prune -f
           ps -ef | grep java
