--- a/.github/workflows/gradle_dev.yml
+++ b/.github/workflows/gradle_dev.yml
@@ -21,8 +21,16 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: create application.yml
+      run: |
+        cd ./src/main/resources
+        touch ./application-dev.yml
+        echo "$APPLICATION_DEV" > ./application-dev.yml
+      env:
+        APPLICATION_DEV: ${{ secrets.APPLICATION_DEV }}
 
-    # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
+
+      # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
