grade_dev set-yml 파일

--- a/.github/workflows/gradle_dev.yml
+++ b/.github/workflows/gradle_dev.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: create application.yml
       run: |
-        cd ./src/main/resources
+        cd src/main/resources
         touch ./application-dev.yml
         echo "$APPLICATION_DEV" > ./application-dev.yml
       env:
